Update compose deployments based on feedback

--- a/modules/ROOT/pages/depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc
+++ b/modules/ROOT/pages/depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc
@@ -1,4 +1,4 @@
-= Install Infinite Scale on a Server for Production Use
+= Install Infinite Scale on a Server
 :toc: macro
 :toclevels: 3
 :keywords: docker compose, raspberry pi, install, ocis, infinite scale, letsencrypt
@@ -19,7 +19,9 @@ toc::[]
 
 {description} The aim of this guide is to be up and running as fast as possible using a deployment setup that includes *Infinite Scale and web office applications for document collaboration* for home usage or small businesses. It also uses valid certificates from Letsencrypt.
 
-NOTE: This guide references the latest production version of Infinite Scale.
+IMPORTANT: *Some decisions and steps in order need to be taken when setting up and configuring the server. We therefore highly recommend reading the guide and not just trying to copy paste commands.*
+
+NOTE: This guide references the latest {version-type} version of Infinite Scale.
 
 NOTE: With this setup, each deployment only contains one instance of Infinite Scale.
 
@@ -37,7 +39,7 @@ This guide describes an installation of Infinite Scale based on Ubuntu LTS and d
 [NOTE]
 ====
 * Disk space +
-About 2.8GB of disk space is needed as you not only get Infinite Scale but also office packages for online collaboration and other required software to run this setup. 
+About 2.4GB of disk space is needed for the default enabled services as you not only get Infinite Scale but also office packages for online collaboration and other required software to run this setup. If not otherwise defined, this guide used docker managed volumes. See the xref:volumes[Volumes] description for an explanation of the term volume.
 
 * Memory +
 We recommend at minimum 4-6GB of memory. 
@@ -56,7 +58,7 @@ Router, Firewall, NAT, DHCP, networks etc.
 ssh, actions on files, edit files etc.
 
 * Maintaining a server: +
-Setting or changing hostnames, IP configuration, installing SW packages etc.
+Setting or changing hostnames, IP configuration, installing software packages etc.
 
 === Software Stack
 
