--- a/modules/ROOT/pages/deployment/services/s-list/ocm.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/ocm.adoc
@@ -15,6 +15,8 @@ Overview:
 
 Both API's have their roots in CERN where providing resources to trusted partners in an easy way is a key for their daily scientific work.
 
+See the xref:depl-examples/federation/sciencemesh.adoc[Setup Federations Using ScienceMesh] for details on how to setup sharing between users via a federation using OCM. 
+
 == Default Values
 
 * OCM listens on port 9280 by default.
