--- a/modules/ROOT/pages/deployment/services/s-list/nats.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/nats.adoc
@@ -23,9 +23,9 @@ As the service name suggests, this service is based on https://nats.io/[NATS] sp
 
 == Default Registry
 
-By default, `nats-js-kv` is configured as embedded default registry via the `MICRO_REGISTRY` environment variable, see the xref:deployment/services/env-vars-special-scope.adoc#extended-environment-variables[Extended Environment Variables] and xref:deployment/services/registry.adoc[Registry] documentation for more details. If you do not want using the _build-in nats_ registry, set `MICRO_REGISTRY_ADDRESS` to the address of the nats-js cluster, which is the same value as `OCIS_EVENTS_ENDPOINT`. Optionally use `MICRO_REGISTRY_AUTH_USERNAME` and `MICRO_REGISTRY_AUTH_PASSWORD` to authenticate with the external nats cluster.
+By default, `nats-js-kv` is configured as the embedded default registry via the `MICRO_REGISTRY` environment variable, see the xref:deployment/services/env-vars-special-scope.adoc#extended-environment-variables[Extended Environment Variables] and xref:deployment/services/registry.adoc[Registry] documentation for more details. If you do not want using the _built-in nats_ registry, set `MICRO_REGISTRY_ADDRESS` to the address of the nats-js cluster, which is the same value as `OCIS_EVENTS_ENDPOINT`. Optionally use `MICRO_REGISTRY_AUTH_USERNAME` and `MICRO_REGISTRY_AUTH_PASSWORD` to authenticate with the external nats cluster.
 
-NOTE: When `MICRO_REGISTRY` is configured using `kubernetes`, the NATS service will not be used but the Kubernetes registry. In this case, the `MICRO_REGISTRY_ADDRESS` environment variable needs to be set to the url of the Kubernetes registry.
+NOTE: When `MICRO_REGISTRY` is configured using `kubernetes`, the Kubernetes registry will be used and not the NATS service. In this case, the `MICRO_REGISTRY_ADDRESS` environment variable needs to be set to the url of the Kubernetes registry.
 
 == Persistence
 
