--- a/modules/ROOT/pages/deployment/services/registry.adoc
+++ b/modules/ROOT/pages/deployment/services/registry.adoc
@@ -13,7 +13,7 @@ The type of registry to use can be configured with the `MICRO_REGISTRY` environm
 * *nats-js-kv* (Default) +
 Set the environment variable to `nats-js-kv` or leave it empty to use a nats-js key value store as registry.
 +
-NOTE: If not running _build-in nats_, `MICRO_REGISTRY_ADDRESS` needs to be set to the address of the nats-js cluster, which is the same value as `OCIS_EVENTS_ENDPOINT`. Optional: Use `MICRO_REGISTRY_AUTH_USERNAME` and `MICRO_REGISTRY_AUTH_PASSWORD` to authenticate with the nats cluster.
+NOTE: If not running _built-in nats_, `MICRO_REGISTRY_ADDRESS` needs to be set to the address of the nats-js cluster, which is the same value as `OCIS_EVENTS_ENDPOINT`. Optional: Use `MICRO_REGISTRY_AUTH_USERNAME` and `MICRO_REGISTRY_AUTH_PASSWORD` to authenticate with the nats cluster.
 
 * *memory* +
 Setting the environment variable to memory starts an in-memory registry. This only works with the single binary deployment.
