Make the dynamics of stable/production more robust

--- a/modules/ROOT/pages/migration/upgrading_3.0.0_4.0.0.adoc
+++ b/modules/ROOT/pages/migration/upgrading_3.0.0_4.0.0.adoc
@@ -2,6 +2,8 @@
 :toc: right
 :description: This document describes the necessary steps when upgrading Infinite Scale from release 3.0.0 to 4.0.0.
 
+include::partial$multi-location/compose-version.adoc[]
+
 == Introduction
 
 {description}
@@ -18,10 +20,10 @@ IMPORTANT: Read the important notes in the xref:migration/upgrading-ocis.adoc#in
 +
 [source,bash]
 ----
-docker pull owncloud/ocis:4.0.0
+docker pull owncloud/ocis:4.0.7
 ----
 
-* or get the binary from {ocis-downloadpage-url}?sort=time&order=desc[download.owncloud.com,window=_blank].
+* or get the binary from {ocis-downloadpage-url}/stable/?sort=time&order=desc[download.owncloud.com,window=_blank].
 --
 
 . Migrate the Space Index to Messagepack: +
