--- a/modules/ROOT/pages/depl-examples/bare-metal.adoc
+++ b/modules/ROOT/pages/depl-examples/bare-metal.adoc
@@ -18,7 +18,7 @@
 :ocis_url: ocis.example.com
 :ocis_port: 9200
 
-include::partial$multi-location/compose-version-rolling.adoc[]
+include::partial$multi-location/compose-version.adoc[]
 
 == Introduction
 
@@ -71,7 +71,7 @@ Note that this URL must resolve to the server running this installation.
 
 === Install and configure the Infinite Scale Binary
 
-* Download and install the Infinite Scale binary. To get the stable binary from ownCloud, visit {ocis-downloadpage-url}?sort=time&order=desc[download.owncloud.com,window=_blank], select the version and the platform of choice and copy the link of the file.
+* Download and install the Infinite Scale binary. To get the stable binary from ownCloud, visit {ocis-downloadpage-url}/{download-type}/?sort=time&order=desc[download.owncloud.com,window=_blank], select the version and the platform of choice and copy the link of the file.
 +
 [source,bash,subs="attributes+"]
 ----
