[5.0] [PR 1017] docs: updating docker command for getting user id
Backport of PR #1017

--- a/modules/ROOT/pages/deployment/container/container-setup.adoc
+++ b/modules/ROOT/pages/deployment/container/container-setup.adoc
@@ -186,7 +186,7 @@ The Infinite Scale container runs internally with the default user and group ID 
 
 [source,bash]
 ----
-docker inspect owncloud/ocis -f '{{.ContainerConfig.User}}'
+docker inspect owncloud/ocis -f '{{.Config.User}}'
 ----
 
 [source,plaintext]
